--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord</title>
     <link rel="stylesheet" href="css/style.css">
+    
     <div class="container">
         <div>
             Logo
         </div>
-        <div>Link</div>
-        <div>Link</div>
-        <div>Link</div>
-        <div>Link</div>
-        <div>Link</div>
+        <div class="link">
+            <div>Link</div>
+            <div>Link</div>
+            <div>Link</div>
+            <div>Link</div>
+            <div>Link</div>
+        </div>
         <div>
             Login
         </div>
