--- a/index.html
+++ b/index.html
@@ -5,24 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord</title>
     <link rel="stylesheet" href="css/style.css">
-    
-    <div class="container">
-        <div>
-            Logo
-        </div>
-        <div class="link">
-            <div>Link</div>
-            <div>Link</div>
-            <div>Link</div>
-            <div>Link</div>
-            <div>Link</div>
-        </div>
-        <div>
-            Login
-        </div>
-    </div>
 </head>
 <body>
-    
+    <div class="container-header">
+        <div class="item-header">
+            <div>
+                Logo
+            </div>
+            <div class="link">
+                <div>Link</div>
+                <div>Link</div>
+                <div>Link</div>
+                <div>Link</div>
+                <div>Link</div>
+            </div>
+            <div>
+                Login
+            </div>
+        </div>
+    </div>
+    <div class="container-1">
+        <div class="item-1"></div>
+    </div>
+    <div class="container-2">
+        <div class="item-2-1"></div>
+        <div class="item-2-2"></div>
+    </div>
 </body>
 </html>
