--- a/index.html
+++ b/index.html
@@ -31,5 +31,23 @@
         <div class="item-2-1"></div>
         <div class="item-2-2"></div>
     </div>
+    <div class="container-3">
+        <div class="item-3-1"></div>
+        <div class="item-3-2"></div>
+    </div>
+    <div class="container-4">
+        <div class="item-4-1"></div>
+        <div class="item-4-2"></div>
+    </div>
+    <div class="container-5">
+        <div class="item-5"></div>
+    </div>
+    <div class="container-6">
+        <div class="item-6-1"></div>
+        <div class="item-6-2"></div>
+        <div class="item-6-2"></div>
+        <div class="item-6-2"></div>
+        <div class="item-6-2"></div>
+    </div>
 </body>
 </html>
