--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container-header">
         <div class="item-header">
-            <div>
+            <div class="item-header-1">
                 Logo
             </div>
             <div class="link">
@@ -19,7 +19,7 @@
                 <div>Link</div>
                 <div>Link</div>
             </div>
-            <div>
+            <div class="Item-header-1">
                 Login
             </div>
         </div>
@@ -43,11 +43,13 @@
         <div class="item-5"></div>
     </div>
     <div class="container-6">
-        <div class="item-6-1"></div>
-        <div class="item-6-2"></div>
-        <div class="item-6-2"></div>
-        <div class="item-6-2"></div>
-        <div class="item-6-2"></div>
+        <div class="container-6-2">
+            <div class="column-1"></div>
+            <div class="column-2"></div>
+            <div class="column-2"></div>
+            <div class="column-2"></div>
+            <div class="column-2"></div>
+        </div>
     </div>
 </body>
 </html>
